welcome.lessons.welcome.methods.slug.SlugTracking.scala.error
SlugTracking:5: error: type mismatch;
 found   : Unit
 required: Boolean
    avance();
          ^SlugTracking:9: error: type mismatch;
 found   : Unit
 required: Boolean
          avance();
                ^SlugTracking:11: error: type mismatch;
 found   : Unit
 required: Boolean
          else {droite(); droite(); avance();
                                          ^